k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app
  # namespace: default # Descomente e ajuste se o seu namespace não for 'default'
spec:
  rules:
  - http: # O hífen aqui indica que 'rules' é uma lista, e este é o primeiro item.
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app
            port:
              number: 8080
